5.softmax回归（还未学完）

--- a/线性回归/4.准备MNIST数据集.ipynb
+++ b/线性回归/4.准备MNIST数据集.ipynb
@@ -241,7 +241,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## 读取小批量数据"
+    "## 将整个代码封装成函数"
    ],
    "metadata": {
     "collapsed": false,
@@ -254,7 +254,42 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "batch_size = 256\n",
+    "\n",
+    "def get_dataloader_workers():  #@save\n",
+    "    \"\"\"使用4个进程来读取数据\"\"\"\n",
+    "    return 4\n",
+    "\n",
+    "def load_data_fashion_mnist(batch_size, resize=None):\n",
+    "    trans = [transforms.ToTensor()]\n",
+    "    if resize:\n",
+    "        trans.insert(0, transforms.Resize(resize)) #这里是list.insert\n",
+    "        #trans = [transforms.Resize(resize),transforms.ToTensor()]\n",
+    "    #将两种转换链接\n",
+    "    trans = transforms.Compose(trans)\n",
+    "    mnist_train = torchvision.datasets.FashionMNIST(\n",
+    "        root=\"../data\", train=True, transform=trans, download=True)\n",
+    "    mnist_test = torchvision.datasets.FashionMNIST(\n",
+    "        root=\"../data\", train=False, transform=trans, download=True)\n",
+    "    return data.DataLoader(mnist_train, batch_size, shuffle=True,num_workers=get_dataloader_workers()),data.DataLoader(mnist_test, batch_size, shuffle=False,num_workers=get_dataloader_workers())"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "train_iter, test_iter = load_data_fashion_mnist(32,resize=64)\n",
+    "for X,y in train_iter:\n",
+    "    print(X.shape,y.shape)\n"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
