--- a/线性回归/5.softmax回归从零开始实现.ipynb
+++ b/线性回归/5.softmax回归从零开始实现.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 143,
    "metadata": {
     "collapsed": true
    },
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 144,
    "outputs": [],
    "source": [
     "num_inputs = 784  #28*28\n",
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 145,
    "outputs": [],
    "source": [
     "def softmax(X):\n",
@@ -76,14 +76,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 146,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[0.1844, 0.0880, 0.0964, 0.5359, 0.0952],\n",
-      "        [0.0870, 0.0718, 0.2409, 0.0487, 0.5515]]) tensor([1., 1.])\n"
+      "tensor([[0.0356, 0.3755, 0.2099, 0.0644, 0.3146],\n",
+      "        [0.1370, 0.1795, 0.3829, 0.0313, 0.2694]]) tensor([1.0000, 1.0000])\n"
      ]
     }
    ],
@@ -115,11 +115,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 147,
    "outputs": [],
    "source": [
     "def net(X):\n",
-    "    return softmax(torch.matmul(torch.reshape(X,(-1,X.shape[0])),W)+b)"
+    "    return softmax(torch.matmul(X.reshape((-1, W.shape[0])), W) + b)"
    ],
    "metadata": {
     "collapsed": false,
@@ -130,21 +130,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "tensor([0.1000, 0.5000])"
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 148,
+   "outputs": [],
    "source": [
-    "y = torch.tensor([0, 2])\n",
-    "y_hat = torch.tensor([[0.1, 0.3, 0.6], [0.3, 0.2, 0.5]])\n",
-    "y_hat[[0, 1], y]  #返回[0,0] [1,2]两个位置的数据"
+    "# y = torch.tensor([0, 2])\n",
+    "# y_hat = torch.tensor([[0.1, 0.3, 0.6], [0.3, 0.2, 0.5]])\n",
+    "# y_hat[[0, 1], y]  #返回[0,0] [1,2]两个位置的数据"
    ],
    "metadata": {
     "collapsed": false,
@@ -155,22 +146,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "tensor([2.3026, 0.6931])"
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 149,
+   "outputs": [],
    "source": [
     "#返回预测的真实标签类的交叉熵损失\n",
     "def cross_entropy(y_hat, y):\n",
     "    return - torch.log(y_hat[range(len(y_hat)), y])\n",
-    "cross_entropy(y_hat, y)"
+    "# cross_entropy(y_hat, y)         #"
    ],
    "metadata": {
     "collapsed": false,
@@ -193,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 150,
    "outputs": [],
    "source": [
     "def accuracy(y_hat, y):  #@save\n",
@@ -212,20 +194,146 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 151,
+   "outputs": [],
+   "source": [
+    "# accuracy(y_hat, y) / len(y)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "source": [
+    "class Accumulator:  #@save\n",
+    "    \"\"\"在n个变量上累加\"\"\"\n",
+    "    def __init__(self, n):\n",
+    "        self.data = [0.0] * n\n",
+    "\n",
+    "    def add(self, *args):\n",
+    "        self.data = [a + float(b) for a, b in zip(self.data, args)]\n",
+    "\n",
+    "    def reset(self):\n",
+    "        self.data = [0.0] * len(self.data)\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        return self.data[idx]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "execution_count": 152,
+   "outputs": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "outputs": [],
+   "source": [
+    "def evaluate_accuracy(net, data_iter):  #@save\n",
+    "    \"\"\"计算在指定数据集上模型的精度\"\"\"\n",
+    "    if isinstance(net, torch.nn.Module):\n",
+    "        net.eval()  # 将模型设置为评估模式\n",
+    "    metric = Accumulator(2)  # 正确预测数、预测总数\n",
+    "    with torch.no_grad():\n",
+    "        for X, y in data_iter:\n",
+    "            #accuracy(net(X), y)，每一批次正确的数量\n",
+    "            #每一批的总数\n",
+    "            metric.add(accuracy(net(X), y), y.numel())\n",
+    "    return metric[0] / metric[1]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
    "outputs": [
     {
      "data": {
-      "text/plain": "0.5"
+      "text/plain": "0.0507"
      },
-     "execution_count": 18,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "accuracy(y_hat, y) / len(y)\n"
+    "evaluate_accuracy(net, test_iter)"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 训练"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "outputs": [],
+   "source": [
+    "def train_epoch_ch3(net, train_iter, loss, updater):  #@save\n",
+    "    \"\"\"训练模型一个迭代周期（定义见第3章）\"\"\"\n",
+    "    # 将模型设置为训练模式\n",
+    "    if isinstance(net, torch.nn.Module):\n",
+    "        net.train()\n",
+    "    # 训练损失总和、训练准确度总和、样本数\n",
+    "    metric = Accumulator(3)\n",
+    "    for X, y in train_iter:\n",
+    "        # 计算梯度并更新参数\n",
+    "        y_hat = net(X)\n",
+    "        l = loss(y_hat, y)\n",
+    "        if isinstance(updater, torch.optim.Optimizer):\n",
+    "            # 使用PyTorch内置的优化器和损失函数\n",
+    "            updater.zero_grad()\n",
+    "            l.mean().backward()\n",
+    "            updater.step()\n",
+    "        else:\n",
+    "            # 使用定制的优化器和损失函数\n",
+    "            l.sum().backward()\n",
+    "            updater(X.shape[0])\n",
+    "        metric.add(float(l.sum()), accuracy(y_hat, y), y.numel())\n",
+    "    # 返回训练损失和训练精度\n",
+    "    return metric[0] / metric[2], metric[1] / metric[2]\n",
+    "\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
