--- a/预备知识/1.数据操作.ipynb
+++ b/预备知识/1.数据操作.ipynb
@@ -157,6 +157,386 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[2, 1, 3, 4],\n",
+      "        [1, 2, 3, 4],\n",
+      "        [4, 3, 2, 1]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(torch.tensor([[2,1,3,4],[1,2,3,4],[4,3,2,1]]))\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 运算"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([ 3.,  4.,  6., 10.]) tensor([-1.,  0.,  2.,  6.]) tensor([ 2.,  4.,  8., 16.]) tensor([0.5000, 1.0000, 2.0000, 4.0000]) tensor([ 1.,  4., 16., 64.])\\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = torch.tensor([1.0,2,4,8])\n",
+    "y = torch.tensor([2,2,2,2])\n",
+    "print(x+y)\n",
+    "print(x-y)\n",
+    "print(x*y)\n",
+    "print(x/y)\n",
+    "print(x**y)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([2.7183e+00, 7.3891e+00, 5.4598e+01, 2.9810e+03])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(torch.exp(x))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[ 0.,  1.,  2.,  3.],\n",
+      "        [ 4.,  5.,  6.,  7.],\n",
+      "        [ 8.,  9., 10., 11.],\n",
+      "        [ 2.,  1.,  4.,  3.],\n",
+      "        [ 1.,  2.,  3.,  4.],\n",
+      "        [ 4.,  3.,  2.,  1.]])\n",
+      "tensor([[ 0.,  1.,  2.,  3.,  2.,  1.,  4.,  3.],\n",
+      "        [ 4.,  5.,  6.,  7.,  1.,  2.,  3.,  4.],\n",
+      "        [ 8.,  9., 10., 11.,  4.,  3.,  2.,  1.]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "X = torch.arange(12, dtype=torch.float32).reshape((3,4))\n",
+    "Y = torch.tensor([[2.0, 1,4,3],[1,2,3,4],[4,3,2,1]])\n",
+    "print(torch.cat((X,Y),dim=0))\n",
+    "print(torch.cat((X,Y),dim=1))\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[False,  True, False,  True],\n",
+      "        [False, False, False, False],\n",
+      "        [False, False, False, False]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X==Y)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(66.)\n",
+      "tensor(5.5000)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X.sum())\n",
+    "print(X.mean())"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 广播机制\n",
+    "在某些情况下，即使形状不同，我们仍然可以通过调用 广播机制（broadcasting mechanism）来执行按元素操作。这种机制的工作方式如下：首先，通过适当复制元素来扩展一个或两个数组， 以便在转换之后，两个张量具有相同的形状。 其次，对生成的数组执行按元素操作。"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0],\n",
+      "        [1],\n",
+      "        [2]]) tensor([[0, 1]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = torch.arange(3).reshape((3,1))\n",
+    "b = torch.arange(2).reshape((1,2))\n",
+    "print(a,b)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0, 1],\n",
+      "        [1, 2],\n",
+      "        [2, 3]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a+b)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 索引和切片"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([ 8.,  9., 10., 11.])\n",
+      "tensor([[ 4.,  5.,  6.,  7.],\n",
+      "        [ 8.,  9., 10., 11.]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X[-1])\n",
+    "print(X[1:3])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[ 2.,  2.,  2.,  2.],\n",
+      "        [ 2.,  2.,  2.,  2.],\n",
+      "        [ 8.,  9., 10., 11.]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "X[0:2,:] = 2\n",
+    "print(X)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 节省内存"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "False"
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "before = id(Y)\n",
+    "Y = Y + X\n",
+    "id(Y) == before\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "id(Z): 1813108235064\n",
+      "id(Z): 1813108235064\n"
+     ]
+    }
+   ],
+   "source": [
+    "Z = torch.zeros_like(Y)\n",
+    "print('id(Z):', id(Z))\n",
+    "Z[:] = X + Y\n",
+    "print('id(Z):', id(Z))\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "True"
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "before = id(X)\n",
+    "X += Y\n",
+    "id(X) == before\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
