--- a/预备知识/3.线性代数.ipynb
+++ b/预备知识/3.线性代数.ipynb
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "outputs": [
     {
      "name": "stdout",
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "outputs": [
     {
      "name": "stdout",
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "outputs": [
     {
      "name": "stdout",
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "outputs": [
     {
      "name": "stdout",
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "outputs": [
     {
      "name": "stdout",
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "outputs": [
     {
      "name": "stdout",
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "outputs": [
     {
      "name": "stdout",
@@ -516,6 +516,110 @@
    "source": [
     "#这样就可以利用广播机制\n",
     "print(A / sum_A)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 点积"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([0., 1., 2., 3.]) tensor([1., 1., 1., 1.]) tensor(6.)\n"
+     ]
+    }
+   ],
+   "source": [
+    "y = torch.ones(4, dtype=torch.float32)\n",
+    "print(x,y,torch.dot(x,y))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 矩阵点积 （size相同）\n",
+    "A变为每一个元素都是一个行向量的列向量，AX列向量的每一个元素都是A中行向量与x的点积"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "x1 = torch.ones(4,1)\n",
+    "print(A.shape,x.shape)\n",
+    "print(torch.mv(A,x))\n",
+    "print(torch.matmul(A,x1))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 矩阵乘法(mk*kn)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[ 6.,  6.,  6.],\n",
+      "        [22., 22., 22.],\n",
+      "        [38., 38., 38.],\n",
+      "        [54., 54., 54.],\n",
+      "        [70., 70., 70.]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "B = torch.ones(4, 3)\n",
+    "print(torch.mm(A,B))"
    ],
    "metadata": {
     "collapsed": false,
