--- a/预备知识/3.线性代数.ipynb
+++ b/预备知识/3.线性代数.ipynb
@@ -629,9 +629,103 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## 范数"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 30,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(5.)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# L2范数\n",
+    "u = torch.tensor([3.0, -4.0])\n",
+    "print(torch.norm(u))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(7.)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# L1范数\n",
+    "print(torch.abs(u).sum())"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "tensor(6.)"
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#矩阵形式的范数\n",
+    "torch.norm(torch.ones((4, 9)))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1., 1., 1., 1., 1., 1., 1., 1., 1.],\n",
+      "        [1., 1., 1., 1., 1., 1., 1., 1., 1.],\n",
+      "        [1., 1., 1., 1., 1., 1., 1., 1., 1.],\n",
+      "        [1., 1., 1., 1., 1., 1., 1., 1., 1.]])\n"
+     ]
+    }
+   ],
    "source": [],
    "metadata": {
     "collapsed": false,
