--- a/线性回归/5.softmax回归从零开始实现.ipynb
+++ b/线性回归/5.softmax回归从零开始实现.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "num_inputs = 784  #28*28\n",
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "def softmax(X):\n",
@@ -76,14 +76,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[0.0356, 0.3755, 0.2099, 0.0644, 0.3146],\n",
-      "        [0.1370, 0.1795, 0.3829, 0.0313, 0.2694]]) tensor([1.0000, 1.0000])\n"
+      "tensor([[0.1214, 0.2769, 0.0502, 0.1491, 0.4025],\n",
+      "        [0.3918, 0.0851, 0.3730, 0.0921, 0.0580]]) tensor([1.0000, 1.0000])\n"
      ]
     }
    ],
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "def net(X):\n",
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "# y = torch.tensor([0, 2])\n",
@@ -146,9 +146,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 9,
    "outputs": [],
    "source": [
+    "#从0-len（y_hat）个样本中，拿出样本真实标签对应的概率\n",
     "#返回预测的真实标签类的交叉熵损失\n",
     "def cross_entropy(y_hat, y):\n",
     "    return - torch.log(y_hat[range(len(y_hat)), y])\n",
@@ -175,13 +176,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "def accuracy(y_hat, y):  #@save\n",
     "    \"\"\"计算预测正确的数量\"\"\"\n",
+    "\n",
     "    if len(y_hat.shape) > 1 and y_hat.shape[1] > 1:\n",
+    "        #y_hat变成模型预测的类别,argmax返回的是下标\n",
     "        y_hat = y_hat.argmax(axis=1)\n",
+    "    #计算预测正确的数量\n",
     "    cmp = y_hat.type(y.dtype) == y\n",
     "    return float(cmp.type(y.dtype).sum())"
    ],
@@ -194,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 11,
    "outputs": [],
    "source": [
     "# accuracy(y_hat, y) / len(y)"
@@ -229,12 +233,12 @@
      "name": "#%%\n"
     }
    },
-   "execution_count": 152,
+   "execution_count": 12,
    "outputs": []
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 13,
    "outputs": [],
    "source": [
     "def evaluate_accuracy(net, data_iter):  #@save\n",
@@ -258,13 +262,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 14,
    "outputs": [
     {
      "data": {
-      "text/plain": "0.0507"
+      "text/plain": "0.1567"
      },
-     "execution_count": 154,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 15,
    "outputs": [],
    "source": [
     "def train_epoch_ch3(net, train_iter, loss, updater):  #@save\n",
@@ -331,9 +335,131 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "outputs": [],
+   "source": [
+    "class Animator:  #@save\n",
+    "    \"\"\"在动画中绘制数据\"\"\"\n",
+    "    def __init__(self, xlabel=None, ylabel=None, legend=None, xlim=None,\n",
+    "                 ylim=None, xscale='linear', yscale='linear',\n",
+    "                 fmts=('-', 'm--', 'g-.', 'r:'), nrows=1, ncols=1,\n",
+    "                 figsize=(3.5, 2.5)):\n",
+    "        # 增量地绘制多条线\n",
+    "        if legend is None:\n",
+    "            legend = []\n",
+    "        d2l.use_svg_display()\n",
+    "        self.fig, self.axes = d2l.plt.subplots(nrows, ncols, figsize=figsize)\n",
+    "        if nrows * ncols == 1:\n",
+    "            self.axes = [self.axes, ]\n",
+    "        # 使用lambda函数捕获参数\n",
+    "        self.config_axes = lambda: d2l.set_axes(\n",
+    "            self.axes[0], xlabel, ylabel, xlim, ylim, xscale, yscale, legend)\n",
+    "        self.X, self.Y, self.fmts = None, None, fmts\n",
+    "\n",
+    "    def add(self, x, y):\n",
+    "        # 向图表中添加多个数据点\n",
+    "        if not hasattr(y, \"__len__\"):\n",
+    "            y = [y]\n",
+    "        n = len(y)\n",
+    "        if not hasattr(x, \"__len__\"):\n",
+    "            x = [x] * n\n",
+    "        if not self.X:\n",
+    "            self.X = [[] for _ in range(n)]\n",
+    "        if not self.Y:\n",
+    "            self.Y = [[] for _ in range(n)]\n",
+    "        for i, (a, b) in enumerate(zip(x, y)):\n",
+    "            if a is not None and b is not None:\n",
+    "                self.X[i].append(a)\n",
+    "                self.Y[i].append(b)\n",
+    "        self.axes[0].cla()\n",
+    "        for x, y, fmt in zip(self.X, self.Y, self.fmts):\n",
+    "            self.axes[0].plot(x, y, fmt)\n",
+    "        self.config_axes()\n",
+    "        display.display(self.fig)\n",
+    "        display.clear_output(wait=True)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "outputs": [],
+   "source": [
+    "def train_ch3(net, train_iter, test_iter, loss, num_epochs, updater):  #@save\n",
+    "    \"\"\"训练模型（定义见第3章）\"\"\"\n",
+    "    animator = Animator(xlabel='epoch', xlim=[1, num_epochs], ylim=[0.3, 0.9],\n",
+    "                        legend=['train loss', 'train acc', 'test acc'])\n",
+    "    for epoch in range(num_epochs):\n",
+    "        train_metrics = train_epoch_ch3(net, train_iter, loss, updater)\n",
+    "        test_acc = evaluate_accuracy(net, test_iter)\n",
+    "        animator.add(epoch + 1, train_metrics + (test_acc,))\n",
+    "    train_loss, train_acc = train_metrics\n",
+    "    assert train_loss < 0.5, train_loss\n",
+    "    assert train_acc <= 1 and train_acc > 0.7, train_acc\n",
+    "    assert test_acc <= 1 and test_acc > 0.7, test_acc"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "outputs": [],
+   "source": [
+    "lr = 0.1\n",
+    "\n",
+    "def updater(batch_size):\n",
+    "    return d2l.sgd([W, b], lr, batch_size)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "num_epochs = 10\n",
+    "train_ch3(net, train_iter, test_iter, cross_entropy, num_epochs, updater)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": true
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def predict_ch3(net, test_iter, n=6):  #@save\n",
+    "    \"\"\"预测标签（定义见第3章）\"\"\"\n",
+    "    for X, y in test_iter:\n",
+    "        break\n",
+    "    trues = d2l.get_fashion_mnist_labels(y)\n",
+    "    preds = d2l.get_fashion_mnist_labels(net(X).argmax(axis=1))\n",
+    "    titles = [true +'\\n' + pred for true, pred in zip(trues, preds)]\n",
+    "    d2l.show_images(\n",
+    "        X[0:n].reshape((n, 28, 28)), 1, n, titles=titles[0:n])\n",
+    "\n",
+    "predict_ch3(net, test_iter)"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
