--- a/预备知识/5.自动微分.ipynb
+++ b/预备知识/5.自动微分.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
@@ -25,7 +25,7 @@
    ],
    "source": [
     "x = torch.arange(4.0)\n",
-    "print(x)\n"
+    "print(x)"
    ],
    "metadata": {
     "collapsed": false,
