--- a/线性回归/6.softmax回归的简洁实现.ipynb
+++ b/线性回归/6.softmax回归的简洁实现.ipynb
@@ -11,7 +11,8 @@
     "import torch\n",
     "from torch import nn\n",
     "from d2l import torch as d2l\n",
-    "\n",
+    "import os\n",
+    "os.environ[\"KMP_DUPLICATE_LIB_OK\"]=\"TRUE\"\n",
     "batch_size = 256\n",
     "train_iter, test_iter = d2l.load_data_fashion_mnist(batch_size)\n"
    ]
