--- a/多层感知机/4.模型选择、欠拟合和过拟合.ipynb
+++ b/多层感知机/4.模型选择、欠拟合和过拟合.ipynb
@@ -264,9 +264,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "outputs": [],
    "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "outputs": [],
+   "source": [
+    "\n"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
