kaggle房价预测竞赛

--- a/多层感知机/8.提交到kaggle上的代码.ipynb
+++ b/多层感知机/8.提交到kaggle上的代码.ipynb
@@ -10,7 +10,7 @@
    },
    "source": [
     "## 把模型改成了多层感知机\n",
-    "排名1726\n",
+    "排名1728 bouncyself\n",
     "链接：https://www.kaggle.com/competitions/house-prices-advanced-regression-techniques/leaderboard"
    ]
   },
