--- a/多层感知机/8.提交到kaggle上的代码.ipynb
+++ b/多层感知机/8.提交到kaggle上的代码.ipynb
@@ -10,8 +10,8 @@
    },
    "source": [
     "## 把模型改成了多层感知机\n",
-    "排名1728 bouncyself\n",
-    "链接：https://www.kaggle.com/competitions/house-prices-advanced-regression-techniques/leaderboard"
+    "排名1307\n",
+    "链接：https://www.kaggle.com/code/bouncyself/notebooka5c6158fee"
    ]
   },
   {
@@ -59,9 +59,10 @@
     "        nn.Linear(50,1),\n",
     "        nn.ReLU()\n",
     "    )\n",
+    "    nn.init.normal_(net[0].weight, mean=0, std=(torch.sqrt(torch.tensor(2/(feature_num+100)))))\n",
+    "    nn.init.normal_(net[2].weight, mean=0, std=(torch.sqrt(torch.tensor(2/(100+50)))))\n",
+    "    nn.init.normal_(net[4].weight, mean=0, std=(torch.sqrt(torch.tensor(2/(50+1)))))\n",
     "\n",
-    "    for param in net.parameters():\n",
-    "        nn.init.normal_(param, mean=0, std=0.01)\n",
     "    return net"
    ],
    "metadata": {
@@ -123,8 +124,6 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "\n",
     "def train(net, train_features, train_labels, test_features, test_labels,\n",
     "          num_epochs, learning_rate, weight_decay, batch_size):\n",
